Fix: stretch attribute is changed from Boolean to Enum
Fix: stretch attribute is changed from Boolean to Enum

--- a/ch5-button-list/scss/_button-list-default.scss
+++ b/ch5-button-list/scss/_button-list-default.scss
@@ -40,7 +40,7 @@
     justify-content: start;
   }
 
-  &.ch5-button-list--stretch-true {
+  &.ch5-button-list--stretch-both {
     align-content: stretch;
     justify-content: stretch;
   }
