--- a/ch5-button-list/scss/_button-list-orientation.scss
+++ b/ch5-button-list/scss/_button-list-orientation.scss
@@ -18,7 +18,7 @@
       height: 100%;
     }
 
-    &.ch5-button-list--stretch-true {
+    &.ch5-button-list--stretch-both {
       .ch5-button-list--button-container {
         width: 100%;
       }
@@ -68,7 +68,7 @@
       width: 100%;
     }
 
-    &.ch5-button-list--stretch-true {
+    &.ch5-button-list--stretch-both {
       .ch5-button-list--button-container {
         height: 100%;
       }
